--- a/HttpClientLibrary.csproj
+++ b/HttpClientLibrary.csproj
@@ -5,10 +5,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RestoreSources>https://api.nuget.org/v3/index.json</RestoreSources>
+    <PackageId>HttpClientLibrary.04.17.24.001</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Mpucuko Ndlazi</Authors>
+    <Company>Peak Hit</Company>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
+
+  
 
 </Project>
